Add /profile/{username} endpoint
