# app/docs/swagger.yaml
@@ -1,4 +1,9 @@
 definitions:
+  models.AccessTokenOut:
+    properties:
+      token:
+        type: string
+    type: object
   models.OpeningOut:
     properties:
       anime_name:
@@ -24,6 +29,38 @@ definitions:
 info:
   contact: {}
 paths:
+  /auth:
+    post:
+      consumes:
+      - application/json
+      description: Authorize user
+      parameters:
+      - description: Username
+        in: body
+        name: username
+        required: true
+        schema:
+          type: string
+      - description: Password
+        in: body
+        name: password
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AccessTokenOut'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Authorize user
+      tags:
+      - auth
   /openings:
     get:
       consumes:
@@ -81,6 +118,33 @@ paths:
       summary: Get one opening by its codename
       tags:
       - openings
+  /profile/{username}:
+    get:
+      consumes:
+      - application/json
+      description: Get profile by username
+      parameters:
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.UserOut'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Get profile by username
+      tags:
+      - profile
   /register:
     post:
       consumes:
@@ -105,7 +169,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.UserOut'
+            $ref: '#/definitions/models.AccessTokenOut'
         "400":
           description: Bad Request
         "500":
